# minimind

./: .gitignore  eval.bat  eval_model.py  requirements.txt  sft.bat  train.bat  train_full_sft.py  train_pretrain.py
.xac/: project.yaml
bpe_demo/: demo_corpus.txt  tokenizer.json  transformers_wrapper_error.txt
class/lec1/: bpe_train.py
model/: dataset.py  model.py
triton_framework/: README.md  pyproject.toml
triton_framework/scripts/: bench_kernel.py  infer.py  smoke_test_triton_model.py  train.py  train_minimind.py  train_unified_triton.py
triton_framework/src/configs/: __init__.py
triton_framework/src/data/: dummy.py
triton_framework/src/engine/: distributed.py  inferencer.py  utils.py
triton_framework/src/kernels/: __init__.py  attention.py  matmul.py  silu.py
triton_framework/src/modules/: __init__.py  activations.py  attention.py  basic_block.py  linear.py
triton_framework/src/triton_framework/: __init__.py
triton_framework/src/triton_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
triton_framework/src/triton_framework/configs/: default.yaml  matmul_configs.py
triton_framework/src/triton_framework/engine/: schedulers.py
triton_framework/src/triton_framework/kernels/: __init__.py  dropout.py  gelu.py  matmul.py  rmsnorm.py  silu.py
triton_framework/src/triton_framework/modules/: simple_lm.py
triton_framework/tests/: test_minimind_triton.py  test_rmsnorm.py
wandb/: latest-run
wandb/run-20250217_113819-2yrtwemc/: run-2yrtwemc.wandb
wandb/run-20250217_150216-yiu5z2ur/: run-yiu5z2ur.wandb
(+22 files in other folders)
